# m2g_tooluse_agent

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
assets/: README.md  manifest.example.yaml
docs/: 00_overview.md  01_installation.md  02_assets.md  03_gt_demo.md  04_rl_locomotion.md  05_rosa_ros2_bridge.md  06_training.md  07_troubleshooting.md  08_repository_design.md  open_source_audit.md
examples/: ros2_cli_examples.md  rosa_prompts.md
m2g_tooluse/: __init__.py
m2g_tooluse/assets/: __init__.py
m2g_tooluse/assets/cfg/: __init__.py  go2_piper.py  piper.py
m2g_tooluse/gt_demo/: README.md  __init__.py  config.py  controller.py  locomotion_controller.py  rosa_tools.py  run_gt_demo.py  run_locomotion_policy_demo.py  search_and_pick.py  types.py
m2g_tooluse/gt_demo/ros2_bridge/: __init__.py  gt_demo_node.py  rpc_server.py
m2g_tooluse/gt_demo/rosa_agent/: __init__.py  m2g_rosa_agent.py  prompts.py  tools.py
m2g_tooluse/gt_demo/scene/: __init__.py  scene_cfg.py
m2g_tooluse/gt_demo/skill/: __init__.py  (+5 more)
m2g_tooluse/scene/: __init__.py  go2_piper_simple_room_env_cfg.py  simple_room_cfg.py
m2g_tooluse/skills/: __init__.py  go2_base_nav.py  isaaclab_velocity_adapter.py  types.py
m2g_tooluse/tasks/: __init__.py  go2_piper_gripper_cycle.py
m2g_tooluse/train/: __init__.py
scripts/: check_assets.py  check_env.py  prepare_go2_piper_assets.py  smoke_test_gt_demo.sh  smoke_test_locomotion_policy.sh  smoke_test_python.sh
scripts/source_examples/: go2_simpleroom_teleop.py
videos/: README.md  index.html
(+24 files in other folders)
