[project]
name = "m2g-tooluse"
version = "0.1.0"
description = "ROSA-enabled Go2+Piper tool-use simulation and skill testing in IsaacLab."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "M2G ToolUse Contributors"}
]

[tool.setuptools.packages.find]
include = ["m2g_tooluse*"]
